[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "unitmd"
version = "0.1.0"
description = "markdown utils"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "Markdown",
    "Pygments >= 2.12.0",
    "pymdown-extensions",
    "md-mermaid",
    "markdown_captions",
    "md4mathjax"
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
unitmd = "unitmd:command.parse"
